Setup Berksfile and more ignores

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,17 @@
-.bundle
-.cache
-.kitchen
-.rvmrc
-bin
+.vagrant
+Berksfile.lock
+*~
+*#
+.#*
+\#*#
+.*.sw[a-z]
+*.un~
+/cookbooks
+
+# Bundler
+Gemfile.lock
+bin/*
+.bundle/*
+
+.kitchen/
+.kitchen.local.yml
